# BallGame

./: .gitignore  Ball.cpp  CMakeLists.txt  README.md  config.json  config2.json
config/: powerups.json
docs/: ai_dialogue.md  architecture.md  async_loading_module.md  commercialization_strategy.md  networking_module.md  recent_changes.md  ui_design_system.md  开发感想.md  版本更新记录.md  道具系统架构简述.md
include/: Ball.h  BallManager.hpp  Brick.h  Game.h  GameTypes.hpp  GameWorld.hpp  Paddle.h  Paddle.hpp
include/Config/: PowerUpConfig.hpp  PowerUpConfigLoader.hpp
include/Debug/: DebugOptions.hpp
include/Effects/: ExpandPaddleEffect.hpp  MultiBallEffect.hpp  PaddleSpeedEffect.hpp  PierceBallEffect.hpp  PowerUpEffect.hpp  SlowBallEffect.hpp
include/Networking/: NetworkPackets.hpp  NetworkSession.hpp
include/Particles/: ParticleSystem.hpp
include/PowerUps/: PowerUp.hpp  PowerUpFactory.hpp  PowerUpSystem.hpp
include/Profile/: PlayerProfile.hpp
src/: Ball.cpp  BallManager.cpp  Brick.cpp  Game.cpp  GamePlay.cpp  GameRender.cpp  GameStyle.hpp  Paddle.cpp  main.cpp  network_demo.cpp
src/Config/: PowerUpConfigLoader.cpp
src/Effects/: ExpandPaddleEffect.cpp  MultiBallEffect.cpp  PaddleSpeedEffect.cpp  PierceBallEffect.cpp  PowerUpEffect.cpp  SlowBallEffect.cpp
src/Networking/: NetworkPackets.cpp  NetworkSession.cpp
src/Particles/: ParticleSystem.cpp
src/PowerUps/: PowerUp.cpp  PowerUpFactory.cpp  PowerUpSystem.cpp
src/Profile/: PlayerProfile.cpp
src/tests/: test_collision.cpp
